<resources>

    <string name="app_name">Aerostretching</string>

    <string-array name="admins">
        <item>9SAhf4qYwUblgodVkFMsATdn1QF2</item>
        <item>DvTHsSaXMfWiBrACbGDPn2B4gq22</item>
        <item>Mzu7oWza0xg8IIWqbuDoS1ixNhk2</item>
        <item>fM5cijeDN4guhX6bK613GrMLdfc2</item>
        <item>zIMog9585DZlqRBAYsxrxyWn9zO2</item>
        <item>CLEWimYtw0XM9Ipg6IlW7lA6Das2</item>
        <item>UQ9wjwJaOgYDzcAxLvp4yfw4atx2</item>
        <item>W0GzW4JH5fanhGJkdJRdaL5sEvf1</item>
    </string-array>

    <!-- Titles -->
    <string name="adminActivity">Admin</string>
    <string name="contactsActivity">Contacts</string>
    <string name="historyActivity">History</string>
    <string name="mainActivity">#AeroStudioStockholm</string>
    <string name="messagesActivity">Messages</string>
    <string name="myPageActivity">My page</string>
    <string name="personalTrainingsActivity">Personal training</string>
    <string name="profileActivity">Profile</string>
    <string name="registerActivity">Register</string>
    <string name="scheduleBookingActivity">#AeroStudioStockholm</string>
    <string name="startActivity">#AeroStudioStockholm</string>
    <string name="trainerActivity">Trainer</string>
    <string name="upcomingTrainingsActivity">Booked trainings</string>

    <!-- Menu -->
    <string name="home">Home</string>
    <string name="groupTraining">Group training</string>
    <string name="admin">Admin</string>
    <string name="language">Byt språk till Svenska</string>

    <string name="notAdmin">You don\'t have access to this page</string>

    <!-- Admin page -->
    <string name="dateHint">Date</string>
    <string name="timeHint">Time</string>
    <string name="lengthHint">Length:&#160;</string>
    <string name="spotsHint">Spots:&#160;</string>
    <string name="addTraining">Add training</string>
        <string name="addTrainingMsg">Are you really sure you want to add this training?</string>

    <string name="answerClient">Answer to %1$s</string>

    <string name="trainingEmpty">You need to fill in all the fields</string>
    <string name="trainingAdded">Training successfully added</string>
    <string name="trainingError">Error when adding training</string>

    <string name="title">Title:</string>
    <string-array name="titles">
        <item>Aeroyoga</item>
        <item>Aerostretching</item>
        <item>Kids Aerostretching</item>
        <item>Suspension</item>
    </string-array>

    <string name="place">Place:</string>
    <string-array name="places">
        <item>Odenplan</item>
        <item>Bromma</item>
        <item>Solna</item>
        <item>Malmö</item>
    </string-array>

    <string name="trainer">Trainer:</string>
    <string-array name="trainer">
        <item>Anastasia</item>
        <item>Anna</item>
        <item>Sofia</item>
    </string-array>

    <string-array name="trainerDescription">
        <item>Founder of the studio for aero yoga, stretching, complex training. Includes universal education aimed at improving health. Listens to their students and helps them achieve their goals.</item>
        <item>Very good instructor who listens and helps if you can not. Really noticeable that she is passionate about what she does and that she wants you to feel good</item>
        <item>Sofia is good at instructing, you never feel judged if something feels difficult and she is very calm and harmonious</item>
    </string-array>

    <string name="trainingParticipants">Participants</string>

    <!-- Book training activity -->
    <string name="trainingTitle">Aeroyoga</string>
    <string name="trainingTime">Start:&#160;</string>
    <string name="trainingPlace" translatable="false">Stockholm, Odenplan</string>
    <string name="trainingSpots">Available spots:&#160;</string>
    <string name="book">Book</string>
    <string name="trainingTrainer" translatable="false">Anastasia Dobrova</string>
    <string name="trainingDescription">Description…</string>
    <string name="minutes">&#160;min</string>

    <string name="bookTitle">Book</string>
    <string name="bookMsg">Do you want to book?</string>

    <string name="removeBookingTitle">Unbook</string>
    <string name="removeBookingMsg">Are you really sure you want to unbook?</string>

    <string name="noSpots">No spots available</string>

    <string name="filter">Filter</string>

    <string name="successfulBooking">Booking successful</string>
    <string name="failedToBook">Error when booking, try again</string>

    <!-- Contacts activity -->
    <string name="phone" translatable="false">070–491 31 05</string>
    <string name="email" translatable="false">info@aerostretching.se</string>
    <string name="address" translatable="false">Engelbrektsgatan 17, Stockholm</string>

    <!-- Main activity -->
    <string name="emailHint">Email</string>
    <string name="passwordHint">Password</string>
    <string name="login">Login</string>
    <string name="or">or</string>
    <string name="register">Register</string>

    <string name="forgotPassword">Forgot password?</string>
    <string name="resetPasswordSent">Password reset email sent</string>
    <string name="errorSending">Error sending, try again</string>

    <!-- Messages -->
    <string name="writeMessage">Write a message…</string>
    <string name="pressToAnswer">Click an item to answer &amp; long press to delete</string>
    <string name="reply">Reply</string>

    <string name="deleteMessageTitle">Delete</string>
    <string name="deleteMessageMsg">Are you really sure you want to delete the message?</string>

    <!-- My page -->
    <string name="licenses">Licenses</string>
    <string name="terms">Terms &amp; Conditions</string>
    <string name="privacyPolicy">Privacy policy</string>

    <!-- Personal activity -->
    <string name="trainingApply">Apply for an individual training session</string>
    <string name="trainingApplyHint">Write briefly what type of training you want, how many people you are and the estimated time.\n\nWe will answer you as soon as possible!</string>
    <string name="sendTraining">Send</string>

    <string name="noTrainingText">You have to write something</string>

    <string name="messageSent">Message successfully sent</string>
    <string name="messageNotSent">Error sending message, try again</string>

    <!-- Profile -->
    <string name="changeEmail">Change email</string>
    <string name="password">Change password</string>

    <string name="profileUpdated">Profile info updated</string>

    <string name="newEmailHint">New email</string>
    <string name="emailUpdated">Email successfully changed</string>
    <string name="emaildNotChanged">Email did not change</string>

    <string name="newPasswordHint">New password</string>
    <string name="repeatPasswordHint">Repeat password</string>
    <string name="passwordUpdated">Password successfully changed</string>
    <string name="passwordNotChanged">Password did not change</string>
    <string name="passwordNoMatch">Password does not match</string>

    <!-- Register -->
    <string name="nameHint">First and last name</string>
    <string name="birthHint">Date of birth</string>
    <string name="phoneHint">Phone number</string>
    <string name="confirmPassword">Confirm password</string>

    <!-- Schedule booking -->
    <string name="filterEmpty">You need to select at least 1 title, place &amp; trainer</string>
    <string name="trainingsEmpty">No trainings to show, adjust the date or filter</string>

    <!-- Start activity -->
    <string name="today">Trainings which you can join soon:</string>
    <string name="seeAll">See all</string>

    <string name="noTrainings">No upcoming trainings to book.\n\n<b>Message us</b> to book personal trainings.</string>

    <!-- Trainer activity -->
    <string-array name="trainingDescription">
        <item>Aero yoga or aerial yoga has the same purpose as classical yoga with origins in ancient India, but with using silk hammock. It is about breath work, they call it pranayama. Your breath flows with your movements, your asana, this is about taking postures in slow motion, here the main goal is to calm down, breath-working.
These beautiful motions are very beneficial to your health. Thanks to the upside down position we stretch the spine without any impact on it. Keep patience and you will be impressed by the results. This triggers the process of formation of new neural connections, a lot of compressions and tensions in the body go away and muscles are relaxed.
        </item>
        <item>Now imagine being able to do physical exercises in the air without touching the floor. Aerostretching has become more and more popular in recent years. You stretch your bodies muscles with the help of a silk hammock as a training tool. The purpose of aerostretching is to stretch all the muscles of the body, become supple, strengthen ligaments and increase the body\'s mobility. The hammock makes it possible for you to go in deeper stretching without getting a heavy load and in this way you can get gentle deep stretching. Leave your thoughts behind you and step into a world of agility with aerostretching. The technique results in a stretching of the whole body, where you work with your own weight with the help of a hammock.\nThis type of stretching prevents the formation of new muscle knots, loosens existing ones and relaxes muscles. As a result, your daily stress will decrease and sleep will improve. The negative stress is converted into positive stress. Remember, it does not matter who you are or what you do. Since man began to walk upright on two legs, everyone has more or less back pain at some point in life. Anastasia Studio guarantees that you will feel happier, fitter and healthier in your body after each workout.</item>
        <item>New adventures, smooth and fun…
\nSilk hammocks and soft floor for the most loveable.
\nNothing can hurt me!
\nRunning laughter, swinging laughter, soaring laughter,
\nI can be your wing man!
\nWe can fly and balance on the clouds.
\nCatch the latest news 🤗😍🤩</item>
        <item>Suspension training is a form of resistance training that includes bodyweight exercises. Suspension training uses functional movements and dynamic positions. These develop strength, balance, flexibility, and joint stability simultaneously. Suspension training is effective total-body workout, it helps to build a rock-solid core.
Benefits people of all fitness levels. This is very low impact training method which allows people of all levels to train comfortably with less risk of injury.
If body becomes strong and beautiful, then it is art.
</item>
    </string-array>

    <!-- Register -->
    <string name="terms0">I agree to the&#160;<b>Terms &amp; Conditions</b></string>
    <string name="terms1">and <b>Privacy Policy</b></string>

    <string name="enterAllFields">Please enter all fields correctly</string>
    <string name="registrationSuccessful">Registration successful</string>
    <string name="userNotCreated">User not created</string>

    <!-- Other -->
    <string name="applyingLanguage">Tillämpar språk…</string>
    <string name="trainingItemDate" translatable="false">15\nOct</string>
    <string name="trainingItemTime" translatable="false">13:00</string>
    <string name="trainingItemLength" translatable="false">55 min</string>

    <!-- Buttons -->
    <string name="delete">Delete</string>
    <string name="unbook">Unbook</string>
    <string name="cancel">Cancel</string>
    <string name="apply">Apply</string>
    <string name="confirm">Confirm</string>
    <string name="close">Close</string>

</resources>