<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingStart="22dp"
    android:paddingTop="5dp"
    android:paddingEnd="22dp">

    <EditText
        android:id="@+id/OldPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:hint="@string/passwordHint"
        android:inputType="textPassword" />

    <EditText

        android:id="@+id/NewPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/OldPassword"
        android:layout_alignParentStart="true"
        android:hint="@string/newPasswordHint"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/RepeatPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/NewPassword"
        android:layout_alignParentStart="true"
        android:hint="@string/repeatPasswordHint"
        android:inputType="textPassword" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/RepeatPassword"
        android:gravity="end"
        android:orientation="horizontal">

        <Button
            android:id="@+id/Confirm_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/colorAccent"
            android:text="@string/confirm" />

        <Button
            android:id="@+id/Cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:backgroundTint="@color/colorAccent"
            android:text="@string/cancel" />

    </LinearLayout>

</RelativeLayout>